[project]
name = "fluree-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Sweet", email = "jsweet@nd.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "polyfactory>=2.20.0",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.5",
    "respx>=0.22.0",
    "testcontainers[generic]>=4.9.2",
]
lint = [
    "ruff>=0.11.2",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --verbose"

[tool.hatch.build.targets.wheel]
packages = ["src/fluree_py"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fluree_py/**/*.py",
]

[tool.hatch.metadata]
allow-direct-references = true
