[project]
name = "fluree-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "James Sweet", email = "jsweet@nd.edu" }]
requires-python = ">=3.11"
dependencies = ["httpx>=0.28.1", "pydantic>=2.10.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "polyfactory>=2.20.0",
  "pytest-icdiff>=0.9",
  "pytest-sugar>=1.0.0",
  "pytest>=8.3.5",
  "respx>=0.22.0",
  "testcontainers[generic]>=4.9.2",
  "hypothesis>=6.130.5",
  "pytest-cov>=6.0.0",
]
lint = ["ruff>=0.11.2"]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.10",
  "mkdocstrings[python]>=0.29.1",
  "mkdocs-coverage>=1.1.0",
  "mkdocs-section-index>=0.3.9",
  "mkdocs-git-revision-date-localized-plugin>=1.4.5",
  "griffe-pydantic>=1.1.4",
  "griffe-warnings-deprecated>=1.1.0",
  "griffe-generics>=1.0.13",
  "griffe-inherited-method-crossrefs>=0.0.1.4",
  "griffe-modernized-annotations>=1.0.8",
  "markdown-callouts>=0.4.0",
  "mkdocs-api-autonav>=0.2.1",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-callouts>=1.16.0",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --verbose --cov=src/fluree_py --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src/fluree_py"]

[tool.hatch.build.targets.sdist]
include = ["src/fluree_py/**/*.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".direnv",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "dist",
]

[tool.ruff.lint]
select = [
    #"ERA",
    "ANN",
    "ASYNC",
    "E", 
    "S",
    "B", 
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "N",
    "PERF",
    "E",
    "W",
    "D",
    "F",
    "PL",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["TC001", "TC002", "TC003", "E501", "COM812", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"tests/**/*.py" = ["INP001", "PLR2004", "DOC", "D", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["fluree_py"]

[tool.ruff.format]
docstring-code-format = true
